Finishing style for projects

--- a/src/app/public/main/main.component.css
+++ b/src/app/public/main/main.component.css
@@ -5,3 +5,11 @@
 .container {
   margin-top: 15px;
 }
+
+.project-carousel {
+  height: 25rem;
+  overflow-x: auto;
+  overflow-y: hidden;
+  display: flex;
+  flex-direction: row;
+}
