--- a/src/app/public/main/main.component.html
+++ b/src/app/public/main/main.component.html
@@ -7,16 +7,23 @@
 <!-- PROJECTS -->
 <div class="container">
   <h2>Projects</h2>
-  <div class="row">
-    <div class="col">
-      here we are something
-    </div>
+  <hr>
+  <div class="project-carousel">
+    <app-project-card></app-project-card>
+    <app-project-card></app-project-card>
+    <app-project-card></app-project-card>
+    <app-project-card></app-project-card>
+    <app-project-card></app-project-card>
+    <app-project-card></app-project-card>
+    <app-project-card></app-project-card>
+    <app-project-card></app-project-card>
   </div>
 </div>
 
 <!-- EXPERIENCE -->
 <div class="container">
   <h2>Experience</h2>
+  <hr>
   <div class="row">
     <div class="col">
       here is something
@@ -27,6 +34,7 @@
 <!-- Languages -->
 <div class="container">
   <h2>Languages & Frameworks</h2>
+  <hr>
   <div class="row">
     <div class="col">
       another shit
