Finishing Experience Card styles

--- a/src/app/public/main/main.component.css
+++ b/src/app/public/main/main.component.css
@@ -6,8 +6,7 @@
   margin-top: 15px;
 }
 
-.project-carousel {
-  height: 25rem;
+.carousel {
   overflow-x: auto;
   overflow-y: hidden;
   display: flex;
