--- a/src/app/public/main/main.component.html
+++ b/src/app/public/main/main.component.html
@@ -8,7 +8,7 @@
 <div class="container">
   <h2>Projects</h2>
   <hr>
-  <div class="project-carousel">
+  <div class="carousel">
     <app-project-card></app-project-card>
     <app-project-card></app-project-card>
     <app-project-card></app-project-card>
@@ -24,10 +24,17 @@
 <div class="container">
   <h2>Experience</h2>
   <hr>
-  <div class="row">
-    <div class="col">
-      here is something
-    </div>
+  <div class="carousel">
+    <app-experience-card></app-experience-card>
+    <app-experience-card></app-experience-card>
+    <app-experience-card></app-experience-card>
+    <app-experience-card></app-experience-card>
+    <app-experience-card></app-experience-card>
+    <app-experience-card></app-experience-card>
+    <app-experience-card></app-experience-card>
+    <app-experience-card></app-experience-card>
+    <app-experience-card></app-experience-card>
+    <app-experience-card></app-experience-card>
   </div>
 </div>
 
