--- a/src/app/public/main/main.component.css
+++ b/src/app/public/main/main.component.css
@@ -12,3 +12,10 @@
   display: flex;
   flex-direction: row;
 }
+
+.navbar {
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  padding-bottom: 10px;
+}
