Adding more content

--- a/src/app/public/main/main.component.html
+++ b/src/app/public/main/main.component.html
@@ -8,6 +8,9 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item">
+        <a class="nav-link" href="#About">About Me</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#Projects">Projects</a>
       </li>
       <li class="nav-item">
@@ -16,9 +19,21 @@
       <li class="nav-item">
         <a class="nav-link" href="#LangFrame">Languages & Frameworks</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#Contact">Contact info</a>
+      </li>
     </ul>
   </div>
 </nav>
+
+<!-- ABOUT ME -->
+<div class="container" id="About">
+  <h2>About Me</h2>
+  <hr>
+  <div>
+    other stuff
+  </div>
+</div>
 
 <!-- PROJECTS -->
 <div class="container" id="Projects">
@@ -72,5 +87,14 @@
     <app-lang-frame-card></app-lang-frame-card>
     <app-lang-frame-card></app-lang-frame-card>
     <app-lang-frame-card></app-lang-frame-card>
+  </div>
+</div>
+
+<!-- Contact information -->
+<div class="container" id="Contact">
+  <h2>Contact Me</h2>
+  <hr>
+  <div>
+    More Stuff
   </div>
 </div>
