--- a/src/app/public/main/cover/cover.component.html
+++ b/src/app/public/main/cover/cover.component.html
@@ -1,4 +1,5 @@
 <div class="cover">
+  <!-- These svg needs to be change if another logo needs to be added -->
   <svg id="Logo" viewBox="0 0 1067 109" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path d="M69.2754 82.68H25.4994L17.4354 105H3.61139L39.8994 5.20798H55.0194L91.1634 105H77.3394L69.2754 82.68ZM65.5314 72.024L47.3874 21.336L29.2434 72.024H65.5314Z" stroke="white" stroke-width="5"/>
     <path d="M185.891 105H172.787L120.083 25.08V105H106.979V4.48798H120.083L172.787 84.264V4.48798H185.891V105Z" stroke="white" stroke-width="5"/>
