--- a/src/app/public/main/main.component.html
+++ b/src/app/public/main/main.component.html
@@ -1,5 +1,6 @@
 <app-cover></app-cover>
 
+<!-- PUBLIC NAVIGATION BAR -->
 <nav class="navbar navbar-dark bg-color navbar-expand-lg">
   <span class="navbar-brand mb-0 h1">ANGEL TREVINO</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
