--- a/src/app/public/main/project-card/project-card.component.html
+++ b/src/app/public/main/project-card/project-card.component.html
@@ -1,13 +1,18 @@
 <div class="card border-dark mb-3" style="width: 18rem;">
+  <!-- img with the screenshot of the project -->
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTAkIgzEEb9WjKS_qJblET3rE3AFJEGB0UHVmI4RBK32S7eIT8K" class="card-img-top" alt="...">
   <div class="card-body">
+    <!-- NAME OF PROJECT -->
     <h5 class="card-title">Mous</h5>
+    <!-- DESCRIPTION OF PROJECT -->
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     <div class="row">
       <div class="col">
+        <!-- THE LINK TO WHERE THE PROJECT IS HOSTED -->
         <button type="button" class="btn btn-outline-primary">Try it</button>
       </div>
       <div class="col">
+        <!-- THE LINK OF THE GITHUB REPO -->
         <button type="button" class="btn btn-outline-secondary">Github</button>
       </div>
     </div>
