Adding about backend

--- a/src/app/modules/admin/main/main.component.html
+++ b/src/app/modules/admin/main/main.component.html
@@ -1,1 +1,11 @@
-<p>main works!</p>
+<div class="container-fluid">
+
+  <h1>Welcome Angel Treviño</h1>
+
+  <div class="container">
+    <h2>About Me</h2>
+    <hr>
+    <app-aboutme></app-aboutme>
+  </div>
+
+</div>
