Adding obtaining projects

--- a/src/app/modules/admin/main/aboutme/aboutme.component.html
+++ b/src/app/modules/admin/main/aboutme/aboutme.component.html
@@ -3,10 +3,10 @@
   <!-- About modification -->
   <h4>English Description</h4>
   <div class="form-group row">
-    <div class="col">
+    <div class="col-sm">
       <p>{{ strEngDesc }}</p>
     </div>
-    <div class="col">
+    <div class="col-sm">
       <textarea rows="3" class="form-control" formControlName="strEngAbout"></textarea>
     </div>
   </div>
