--- a/src/app/modules/public/main/main.component.html
+++ b/src/app/modules/public/main/main.component.html
@@ -40,16 +40,7 @@
 <div class="container" id="Projects">
   <h2>Projects</h2>
   <hr>
-  <div class="carousel">
-    <app-project-card></app-project-card>
-    <app-project-card></app-project-card>
-    <app-project-card></app-project-card>
-    <app-project-card></app-project-card>
-    <app-project-card></app-project-card>
-    <app-project-card></app-project-card>
-    <app-project-card></app-project-card>
-    <app-project-card></app-project-card>
-  </div>
+  <app-project-section></app-project-section>
 </div>
 
 <!-- EXPERIENCE -->
