Starting editor for project

--- a/src/app/modules/admin/main/main.component.html
+++ b/src/app/modules/admin/main/main.component.html
@@ -17,7 +17,7 @@
         <h2>Projects</h2>
       </div>
       <div class="col" style="text-align: end;">
-        <button type="button" class="btn btn-secondary">&#43;</button>
+        <button type="button" class="btn btn-secondary" [routerLink]="['./project']">&#43;</button>
       </div>
     </div>
     <hr>
