--- a/src/app/modules/admin/main/projects-table/projects-table.component.html
+++ b/src/app/modules/admin/main/projects-table/projects-table.component.html
@@ -4,7 +4,7 @@
     <tbody *ngFor="let project of arrProjects">
     <tr>
       <td class="col-8" style="vertical-align: middle;"> {{ project.strName }} </td>
-      <td class="col-2"><button type="button" class="btn btn-warning">Edit</button></td>
+      <td class="col-2"><button type="button" class="btn btn-warning" [routerLink]="['./project', project._id]">Edit</button></td>
       <td class="col-2"><button type="button" class="btn btn-danger">Delete</button></td>
     </tr>
     </tbody>
