Adding Project routes

--- a/src/app/modules/public/main/project-section/project-card/project-card.component.html
+++ b/src/app/modules/public/main/project-section/project-card/project-card.component.html
@@ -5,7 +5,7 @@
     <!-- NAME OF PROJECT -->
     <h5 class="card-title"> {{ project.strName }}</h5>
     <!-- DESCRIPTION OF PROJECT -->
-    <p class="card-text"> {{ project.strEngDescription }}</p>
+    <p class="card-text"> {{ project.strDesc }}</p>
     <div class="row">
       <!-- THE LINK TO WHERE THE PROJECT IS HOSTED -->
       <div class="col" *ngIf="project.strUrlHosting">
