--- a/src/app/modules/admin/main/aboutme/aboutme.component.html
+++ b/src/app/modules/admin/main/aboutme/aboutme.component.html
@@ -4,10 +4,10 @@
   <h4>English Description</h4>
   <div class="form-group row">
     <div class="col-sm">
-      <p>{{ strEngDesc }}</p>
+      <p>{{ strAbout }}</p>
     </div>
     <div class="col-sm">
-      <textarea rows="3" class="form-control" formControlName="strEngAbout"></textarea>
+      <textarea rows="3" class="form-control" formControlName="strFormAbout"></textarea>
     </div>
   </div>
 
