--- a/src/app/modules/admin/main/main.component.html
+++ b/src/app/modules/admin/main/main.component.html
@@ -16,12 +16,28 @@
       <div class="col">
         <h2>Projects</h2>
       </div>
-      <div class="col" style="text-align: end;">
+      <div class="col add-button">
         <button type="button" class="btn btn-secondary" [routerLink]="['./project']">&#43;</button>
       </div>
     </div>
     <hr>
+    <!-- table -->
     <app-projects-table></app-projects-table>
+  </div>
+
+  <!-- WORK EXPERIENCE MANAGER -->
+  <div class="container">
+    <!-- header -->
+    <div class="row">
+      <div class="col">
+        <h2>Work Experience</h2>
+      </div>
+      <div class="col add-button">
+        <button type="button" class="btn btn-secondary" [routerLink]="['./experience']">&#43;</button>
+      </div>
+    </div>
+    <hr>
+    <!-- table -->
   </div>
 
 </div>
