--- a/src/app/modules/admin/experience-editor/experience-editor.component.html
+++ b/src/app/modules/admin/experience-editor/experience-editor.component.html
@@ -35,6 +35,29 @@
     <!-- Currently Working -->
     <div class="form-group row">
 
+      <!-- Start Date -->
+      <div class="input-group col-6">
+        <label for="startDate">The date you started at this position</label>
+        <input id="startDate" class="form-control" placeholder="yyyy-mm-dd"
+               name="dp" ngbDatepicker #d="ngbDatepicker">
+        <div class="input-group-append">
+          <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button">
+            <img src="https://img.icons8.com/android/24/000000/calendar.png">
+          </button>
+        </div>
+      </div>
+      <!-- End Date -->
+      <div class="input-group col-6">
+        <label for="endDate">The date you finish at this position</label>
+        <input id="endDate" class="form-control" placeholder="yyyy-mm-dd"
+               name="dp" ngbDatepicker #f="ngbDatepicker">
+        <div class="input-group-append">
+          <button class="btn btn-outline-secondary calendar" (click)="f.toggle()" type="button">
+            <img src="https://img.icons8.com/android/24/000000/calendar.png">
+          </button>
+        </div>
+      </div>
+
     </div>
   </form>
 </div>
