--- a/src/app/modules/admin/experience-editor/experience-editor.component.html
+++ b/src/app/modules/admin/experience-editor/experience-editor.component.html
@@ -33,31 +33,71 @@
         formControlName="strDesc"></textarea>
     </div>
     <!-- Currently Working -->
-    <div class="form-group row">
-
-      <!-- Start Date -->
-      <div class="input-group col-6">
-        <label for="startDate">The date you started at this position</label>
-        <input id="startDate" class="form-control" placeholder="yyyy-mm-dd"
-               name="dp" ngbDatepicker #d="ngbDatepicker">
-        <div class="input-group-append">
-          <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button">
-            <img src="https://img.icons8.com/android/24/000000/calendar.png">
-          </button>
+    <div class="form-group" class="row">
+      <!-- Start date -->
+      <div class="col-md-6">
+        <label for="startDate">Date you started</label>
+        <div class="input-group" id="startDate">
+          <input matInput
+                 [matDatepicker]="startDatePicker"
+                 [max]="maxDateForStart"
+                 (dateInput)="startDateChange($event)"
+                 (dateChange)="startDateChange($event)"
+                 placeholder="mm/dd/yyyy"
+                 class="form-control"
+                 formControlName="startDate">
+          <div class="input-group-prepend">
+            <div class="input-group-calendar">
+              <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+            </div>
+          </div>
+          <mat-datepicker #startDatePicker></mat-datepicker>
         </div>
       </div>
-      <!-- End Date -->
-      <div class="input-group col-6">
-        <label for="endDate">The date you finish at this position</label>
-        <input id="endDate" class="form-control" placeholder="yyyy-mm-dd"
-               name="dp" ngbDatepicker #f="ngbDatepicker">
-        <div class="input-group-append">
-          <button class="btn btn-outline-secondary calendar" (click)="f.toggle()" type="button">
-            <img src="https://img.icons8.com/android/24/000000/calendar.png">
-          </button>
+      <!-- End date -->
+      <div class="col-md-6">
+        <!-- end date picker -->
+        <div>
+          <label for="endDate">Date you ended</label>
+          <div class="input-group" id="endDate">
+            <input matInput
+                   [matDatepicker]="endDatePicker"
+                   [min]="minDateForEnd"
+                   [max]="maxDateForEnd"
+                   (dateInput)="endDateChange($event)"
+                   (dateChange)="endDateChange($event)"
+                   placeholder="mm/dd/yyyy"
+                   class="form-control"
+                   formControlName="endDate"
+                   [disabled]="boolWorkingNow.value">
+            <div class="input-group-prepend">
+              <div class="input-group-calendar">
+                <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
+              </div>
+            </div>
+            <mat-datepicker #endDatePicker></mat-datepicker>
+          </div>
+        </div>
+        <!-- checkbox if we are still working there -->
+        <div style="padding-top: 5px">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="nowWorking" formControlName="boolWorkingNow">
+            <label class="form-check-label" for="nowWorking">
+              Currently Working here
+            </label>
+          </div>
         </div>
       </div>
 
     </div>
+
+    <div class="row button-row">
+      <button type="button" class="btn btn-danger" [routerLink]="['/admin']">Cancel</button>
+      <button type="button"
+              class="btn btn-primary"
+              [disabled]="experienceForm.invalid && boolWorkingNow.value == false && endDate.value == null"
+              (click)="onCreate()">Create</button>
+    </div>
+
   </form>
 </div>
