--- a/src/app/modules/admin/main/projects-table/projects-table.component.html
+++ b/src/app/modules/admin/main/projects-table/projects-table.component.html
@@ -1,6 +1,12 @@
 <!-- TABLE  -->
 <div class="table-responsive">
-  <table class="table table-striped " *ngIf="!showSpinner && arrProjects.length > 0">
+  <table class="table table-hover" *ngIf="!showSpinner && arrProjects.length > 0">
+    <thead class="thead-dark">
+    <tr>
+      <th class="col-8">Project Name</th>
+      <th class="col-4"></th>
+    </tr>
+    </thead>
     <tbody *ngFor="let project of arrProjects">
     <tr>
       <td class="col-8" style="vertical-align: middle;"> {{ project.strName }} </td>
