Finishing get Experience for public

--- a/src/app/modules/public/main/main.component.html
+++ b/src/app/modules/public/main/main.component.html
@@ -47,18 +47,7 @@
 <div class="container" id="Experience">
   <h2>Experience</h2>
   <hr>
-  <div class="carousel">
-    <app-experience-card></app-experience-card>
-    <app-experience-card></app-experience-card>
-    <app-experience-card></app-experience-card>
-    <app-experience-card></app-experience-card>
-    <app-experience-card></app-experience-card>
-    <app-experience-card></app-experience-card>
-    <app-experience-card></app-experience-card>
-    <app-experience-card></app-experience-card>
-    <app-experience-card></app-experience-card>
-    <app-experience-card></app-experience-card>
-  </div>
+  <app-experience-section></app-experience-section>
 </div>
 
 <!-- Languages -->
