Adding Delete experience and added missing params

--- a/src/app/modules/admin/experience-editor/experience-editor.component.html
+++ b/src/app/modules/admin/experience-editor/experience-editor.component.html
@@ -90,6 +90,13 @@
       </div>
 
     </div>
+    <div style="padding-bottom: 15px;">
+      <label for="companyURL">Url to company site</label>
+      <input type="text"
+             id="companyURL"
+             placeholder="Company.org"
+             class="form-control" formControlName="strUrlCompanySite">
+    </div>
 
     <div class="row button-row">
       <button type="button" class="btn btn-danger" [routerLink]="['/admin']">Cancel</button>
