--- a/src/app/modules/public/main/experience-section/experience-section.component.html
+++ b/src/app/modules/public/main/experience-section/experience-section.component.html
@@ -1,7 +1,11 @@
-<div *ngIf="!showSpinner" class="carousel">
+<div *ngIf="!showSpinner && this.arrExperience.length > 0" class="carousel">
   <div *ngFor="let experience of arrExperience">
     <app-experience-card [experience]="experience"></app-experience-card>
   </div>
+</div>
+
+<div class="row" style="justify-content: center;" *ngIf="!showSpinner && this.arrExperience.length == 0">
+  <p>No work experience to show</p>
 </div>
 
 <div class="row" style="justify-content: center;" *ngIf="showSpinner">
