--- a/src/app/modules/admin/experience-editor/experience-editor.component.html
+++ b/src/app/modules/admin/experience-editor/experience-editor.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <!-- tittle -->
   <div class="row">
-    <h1>Registering New Work Experience</h1>
+    <h1 *ngIf="!editMode">Registering New Work Experience</h1>
+    <h1 *ngIf="editMode">Editing {{ strCompanyName.value }}</h1>
   </div>
 
   <hr>
@@ -100,10 +101,8 @@
 
     <div class="row button-row">
       <button type="button" class="btn btn-danger" [routerLink]="['/admin']">Cancel</button>
-      <button type="button"
-              class="btn btn-primary"
-              [disabled]="experienceForm.invalid && boolWorkingNow.value == false && endDate.value == null"
-              (click)="onCreate()">Create</button>
+      <button *ngIf="!editMode" type="button" class="btn btn-primary" [disabled]="experienceForm.invalid && boolWorkingNow.value == false && endDate.value == null" (click)="onCreate()">Create</button>
+      <button *ngIf="editMode" class="btn btn-primary" [disabled]="(experienceForm.invalid && boolWorkingNow.value == false && endDate.value == null) || !this.experienceForm.touched" (click)="onUpdateExperience()">Update</button>
     </div>
 
   </form>
