--- a/src/app/modules/admin/education-editor/education-editor.component.html
+++ b/src/app/modules/admin/education-editor/education-editor.component.html
@@ -1,39 +1,31 @@
 <div class="container">
   <!-- tittle -->
   <div class="row">
-    <h1 *ngIf="!editMode">Registering New Work Experience</h1>
-    <h1 *ngIf="editMode">Editing {{ strCompanyName.value }}</h1>
+    <h1>Adding New Education</h1>
   </div>
 
   <hr>
 
-  <form [formGroup]="experienceForm">
-    <!-- Company Name -->
+  <form [formGroup]="educationForm">
+    <!-- School Name -->
     <div class="form-group">
-      <label for="CompanyName">Company's Name</label>
+      <label for="SchoolName">Name of Educational Organization</label>
       <input type="text"
-             id="CompanyName"
-             placeholder="Company Org"
-             class="form-control" formControlName="strCompanyName">
+             id="SchoolName"
+             placeholder="Education Org."
+             class="form-control"
+             formControlName="strSchoolName">
     </div>
-    <!-- Position -->
+    <!-- Title -->
     <div class="form-group">
-      <label for="Position">Position You Took</label>
+      <label for="Title">What were you studying?</label>
       <input type="text"
-             id="Position"
-             placeholder="Full Stack Developer"
-             class="form-control" formControlName="strPosition">
+             id="Title"
+             placeholder="Bachelor of Science"
+             class="form-control"
+             formControlName="strTitle">
     </div>
-    <!-- Description -->
-    <div class="form-group">
-      <label for="ExperienceDesc">Description of what you did at the company</label>
-      <textarea
-        id="ExperienceDesc"
-        cols="15" rows="3"
-        class="form-control"
-        formControlName="strDesc"></textarea>
-    </div>
-    <!-- Currently Working -->
+    <!-- Currently Studying -->
     <div class="form-group row">
       <!-- Start date -->
       <div class="col-md-6">
@@ -70,7 +62,7 @@
                    placeholder="mm/dd/yyyy"
                    class="form-control"
                    formControlName="endDate"
-                   [disabled]="boolWorkingNow.value">
+                   [disabled]="boolStudyingNow.value">
             <div class="input-group-prepend">
               <div class="input-group-calendar">
                 <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
@@ -82,35 +74,31 @@
         <!-- checkbox if we are still working there -->
         <div style="padding-top: 5px">
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="nowWorking" formControlName="boolWorkingNow">
+            <input class="form-check-input" type="checkbox" id="nowWorking" formControlName="boolStudyingNow">
             <label class="form-check-label" for="nowWorking">
-              Currently Working here
+              Currently Studying here
             </label>
           </div>
         </div>
       </div>
-
     </div>
+    <!-- Url to education -->
     <div style="padding-bottom: 15px;">
-      <label for="companyURL">Url to company site</label>
+      <label for="schoolURL">Url to Education Site</label>
       <input type="text"
-             id="companyURL"
+             id="schoolURL"
              placeholder="Company.org"
-             class="form-control" formControlName="strUrlCompanySite">
+             class="form-control" formControlName="strUrlEducationSite">
     </div>
-
+    <!-- buttons -->
     <div class="row button-row">
       <button type="button" class="btn btn-danger" [routerLink]="['/admin']">Cancel</button>
-      <button *ngIf="!editMode"
-              type="button"
+      <button type="button"
               class="btn btn-primary"
-              [disabled]="experienceForm.invalid || (boolWorkingNow.value == false && endDate.value == null)"
+              [disabled]="educationForm.invalid || (boolStudyingNow.value == false && endDate.value == null)"
               (click)="onCreate()">Create</button>
-      <button *ngIf="editMode"
-              class="btn btn-primary"
-              [disabled]="(experienceForm.invalid || (boolWorkingNow.value == false && endDate.value == null)) || !this.experienceForm.touched"
-              (click)="onUpdateExperience()">Update</button>
     </div>
 
   </form>
+
 </div>
