Finishing most of education, only missing is delete and edit

--- a/src/app/modules/public/main/main.component.html
+++ b/src/app/modules/public/main/main.component.html
@@ -50,6 +50,13 @@
   <app-experience-section></app-experience-section>
 </div>
 
+<!-- Education -->
+<div class="container" id="Education">
+  <h2>Educational History</h2>
+  <hr>
+  <app-education-section></app-education-section>
+</div>
+
 <!-- Languages -->
 <div class="container" id="LangFrame">
   <h2>Languages & Frameworks</h2>
