Adding Technologies get and add

--- a/src/app/modules/admin/main/main.component.html
+++ b/src/app/modules/admin/main/main.component.html
@@ -63,4 +63,19 @@
     <app-table-education></app-table-education>
   </div>
 
+  <!-- TECHNOLOGY TABLE -->
+  <div class="container">
+    <!-- header -->
+    <div class="row">
+      <div class="col">
+        <h2>Technologies</h2>
+      </div>
+      <div class="col add-button">
+        <button class="btn btn-secondary" type="button" [routerLink]="['./technologies']">&#43;</button>
+      </div>
+    </div>
+    <hr>
+    <!-- table -->
+    <app-tec-table></app-tec-table>
+  </div>
 </div>
