--- a/src/app/modules/public/main/main.component.html
+++ b/src/app/modules/public/main/main.component.html
@@ -59,23 +59,9 @@
 
 <!-- Languages -->
 <div class="container" id="LangFrame">
-  <h2>Languages & Frameworks</h2>
+  <h2>Technologies I have work with</h2>
   <hr>
-  <div class="carousel">
-    <app-lang-frame-card></app-lang-frame-card>
-    <app-lang-frame-card></app-lang-frame-card>
-    <app-lang-frame-card></app-lang-frame-card>
-    <app-lang-frame-card></app-lang-frame-card>
-    <app-lang-frame-card></app-lang-frame-card>
-    <app-lang-frame-card></app-lang-frame-card>
-    <app-lang-frame-card></app-lang-frame-card>
-    <app-lang-frame-card></app-lang-frame-card>
-    <app-lang-frame-card></app-lang-frame-card>
-    <app-lang-frame-card></app-lang-frame-card>
-    <app-lang-frame-card></app-lang-frame-card>
-    <app-lang-frame-card></app-lang-frame-card>
-    <app-lang-frame-card></app-lang-frame-card>
-  </div>
+  <app-technologies-section></app-technologies-section>
 </div>
 
 <!-- Contact information -->
